Fixed edit delete button positioning on small screen

--- a/src/components/EntryItemContainer/components/Entry_Item/style.scss
+++ b/src/components/EntryItemContainer/components/Entry_Item/style.scss
@@ -86,11 +86,11 @@
     font-size: 13px;
   }
   .delete {
-    margin-top: 85px;
+    margin-top: 60px;
     right: 12%;
   }
   .edit {
-    margin-top: 85px;
+    margin-top: 60px;
     right: 20%;
   }
 }
